# proteggo

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  proteggo-cli.cpp  proteggo-node.cpp  proteggo-node.h
